@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.6-0
-Date: 2023-06-20
+Date: 2023-06-21
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Description: A rich hierarchy of sparse and dense matrix classes,
