@@ -1,4 +1,9 @@
 #### Testing consistency  of  "abIndex" == "abstract-indexing vectors" class :
+
+## for R_DEFAULT_PACKAGES=NULL :
+library(stats)
+library(utils)
+
 library(Matrix)
 
 source(system.file("test-tools.R", package = "Matrix"))# identical3() etc
