@@ -1,3 +1,7 @@
+## for R_DEFAULT_PACKAGES=NULL :
+library(stats)
+library(utils)
+
 library(Matrix)
 
 source(system.file("test-tools.R", package = "Matrix"))
@@ -77,7 +81,7 @@ assertError(solve(M), verbose=TRUE)## ".. computationally singular" + warning + 
 assertError(solve(t(M)))
 options(warn=2) # no more warnings allowed from here
 lum <- lu(M, warnSing=FALSE)
-stopifnot(is(fLU <- M@factors $ denseLU, "MatrixFactorization"),
+stopifnot(is(fLU <- M@factors[["denseLU"]], "MatrixFactorization"),
           identical(lum, fLU))
 (e.lu <- expand(fLU))
 M2 <- with(e.lu, P %*% L %*% U)
@@ -89,7 +93,7 @@ tt <- try(solve(M.)) # less nice: factor is *not* cached
 M1 <- M. + 0.5*Diagonal(nrow(M.))
 luM1 <- lu(M1)
 d1 <- determinant(as(M1,"denseMatrix"))
-stopifnot(identical(luM1, M1@factors$sparseLU),
+stopifnot(identical(luM1, M1@factors[["sparseLU~"]]),
 	  diag(luM1@L) == 1,# L is *unit*-triangular
 	  all.equal(log(-prod(diag(luM1@U))), c(d1$modulus)))
 
