@@ -1,5 +1,9 @@
 #### Matrix Factorizations  --- of all kinds
 
+## for R_DEFAULT_PACKAGES=NULL :
+library(stats)
+library(utils)
+
 library(Matrix)
 
 source(system.file("test-tools.R", package = "Matrix"))# identical3() etc
